--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
 
     <div class="container">
+      <a href="index.html"><h2>Refresh Me 🎲 Play 🎲</h2></a>
       <h1>Refresh Me</h1>
 
       <div class="dice">
