--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
 
   <footer>
 
-🎲 Jitendra Manasingh 🎲 | Powered by www 🎲 App Brewery 🎲 com
+🎲 Jitendra Manasingh 🎲 Powered by www 🎲 App Brewery 🎲 com
   </footer>
 </html>
